@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinKey.c,v 1.8 2000/04/10 22:43:13 ericm Exp $
+ * RCS: @(#) $Id: tkWinKey.c,v 1.9 2000/04/14 01:36:35 ericm Exp $
  */
 
 #include "tkWinInt.h"
@@ -308,6 +308,37 @@ KeycodeToKeysym(keycode, state, noascii)
     skipToAscii:
     for (key = keymap; key->keycode != 0; key++) {
 	if (key->keycode == keycode) {
+	    /*
+	     * Windows only gives us an undifferentiated VK_CONTROL
+	     * code (for example) when either Control key is pressed.
+	     * To distinguish between left and right, we have to query the
+	     * state of one of the two to determine which was actually
+	     * pressed.  So if the keycode indicates Control, Shift, or Menu
+	     * (the key that everybody else calls Alt), do this extra test.
+	     * If the right-side key was pressed, return the appropriate
+	     * keycode.  Otherwise, we fall through and rely on the
+	     * keymap table to hold the correct keysym value.
+	     */
+	    switch (keycode) {
+		case VK_CONTROL: {
+		    if (GetKeyState(VK_RCONTROL) & 0x80) {
+			return XK_Control_R;
+		    }
+		    break;
+		}
+		case VK_SHIFT: {
+		    if (GetKeyState(VK_RSHIFT) & 0x80) {
+			return XK_Shift_R;
+		    }
+		    break;
+		}
+		case VK_MENU: {
+		    if (GetKeyState(VK_RMENU) & 0x80) {
+			return XK_Alt_R;
+		    }
+		    break;
+		}
+	    }
 	    return key->keysym;
 	}
     }
